[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxtoolbox_rpdeo"
version = "0.1.0a"
authors = [
  { name="Rajesh P. Deo", email="rajesh.deo@gmail.com" },
]
description = "A client for MX ToolBox API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mxtoolbox = "mxtoolbox:cli"

[project.urls]
"Homepage" = "https://github.com/rpdeo/mxtoolbox-client"
"Bug Tracker" = "https://github.com/rpdeo/mxtoolbox-client/issues"